...

"title_accounts" = "Accounts";
"select_transfer_method_country" = "Select Country";
"select_transfer_method_currency" = "Select Currency";
"remove_button_label" = "Remove";
"cancel_button_label" = "Cancel";
"ok_button_label" = "OK";
"try_again_button_label" = "Try Again";
"done_button_label" = "Done";
"search_placeholder_label" = "Search";
"add_transfer_method_fee_label" = "Transaction Fees: ";
"add_transfer_method_processing_time_label" = "Processing Time: ";
"unexpected_error_message" = "Oops... Something went wrong, please try again";
"network_connection_error_title" = "Connectivity Issue";
"unexpected_title" = "Unexpected Error";
"network_connection_error_message" = "We are encountering a problem processing the request. Please check your connectivity.";
"transfer_method_list_item_description" = "Ending on ";
"no_country_available_error_message" = "There is no country available";
"no_transfer_method_available_error_message" = "There is no transfer method available for %1$@ and %2$@";
"no_currency_available_error_message" = "There is no currency available for country %1$@";
"empty_list_transfer_method_message" = "You didn’t add an account yet. Once created, it will show up here!";
"add_account_title" = "Add Account";
"remove_transfer_method_confirmation_title" = "Remove Account";
"remove_transfer_method_confirmation_message" = "Are you sure you want to remove this account?";
"fee_flat_formatter" = "%1$@ %2$@";
"fee_percent_only_min_formatter" = "%1$@%% (Min:%2$@ %3$@)";
"fee_percent_only_max_formatter" = "%1$@%% (Max:%2$@ %3$@)";
"fee_percent_formatter" = "%1$@%% (Min:%2$@ %3$@, Max:%2$@ %4$@)";
"fee_mix_no_min_and_max_formatter" = "%1$@ %2$@ + %3$@%%";
...
"fee_mix_formatter" = "%1$@ %2$@ + %3$@%% (Min:%1$@ %4$@, Max:%1$@ %5$@)";
"fee_percent_no_min_and_max_formatter" = "%1$@%%";
"transfer_method_not_supported_message" = "This transfer method is currently not supported";
"error" = "Error";

    // Transfer methods
"bank_account" = "Bank Account";
"bank_card" = "Debit Card";
"paper_check" = "Paper Check";
"prepaid_card" = "Prepaid Card";
"wire_account" = "Wire Account";
"paypal_account" = "PayPal";

    //Select Transfer Method View
...
