...
// MARK: - SpinnerView

/// Represents Spinner view to be embedded on a view
public final class SpinnerView: UIView {
    private let propertyOpacity = "opacity"

    let activityIndicator: UIActivityIndicatorView = {
        let activity = UIActivityIndicatorView()
        activity.hidesWhenStopped = true
        activity.accessibilityIdentifier = "activityIndicator"
        activity.accessibilityValue = "Loading".localized()
        activity.startAnimating()
        return activity
...
